[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://UI/DialogueBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Gemshard.png" type="Texture" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="HealthUI" parent="." instance=ExtResource( 4 )]
margin_left = 2.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 14.0

[node name="DialogueBox" parent="." instance=ExtResource( 3 )]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.85
anchor_bottom = 7.5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.056
margin_top = 2.0
margin_right = -2.0
grow_horizontal = 0
custom_constants/separation = -2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 14.0
margin_right = 14.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 184.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectTweener" type="Tween" parent="."]
[connection signal="tween_completed" from="ColorRectTweener" to="." method="_on_ColorRectTweener_tween_completed"]
